--- a/src/Components/UrlBox/UrlBox.css
+++ b/src/Components/UrlBox/UrlBox.css
@@ -3,10 +3,31 @@
     border-radius: 20px;
     margin: 40px;
     padding: 20px;
+
     box-shadow: 5px 5px 10px grey;
+    text-overflow: ellipsis;
+
 }
 
 .urlSpan {
     color: rgb(45, 45, 131);
     font-weight: bold;
+}
+
+@media screen and (max-width: 480px) {
+
+    .urlSpan {
+        font-size: 16px;
+
+    }
+
+    .redirectUrl {
+        font-size: 16px;
+
+    }
+
+
+    h5 {
+        font-size: 14px;
+    }
 }
